# storage/api-docs/api-docs.json
@@ -1,72 +1,69 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Laravel Swagger API documentation example",
-        "contact": {
-            "email": "admin@example.com"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
+        "title": "Task service documentation",
         "version": "1.0.0"
     },
-    "servers": [
-        {
-            "url": "http://localhost/api",
-            "description": "Laravel Swagger API server"
-        }
-    ],
     "paths": {
-        "/examples": {
+        "/api/": {},
+        "/tasks/api/v1/reported-tasks": {
             "get": {
                 "tags": [
-                    "Examples"
+                    "Reported Task"
                 ],
-                "summary": "Display a listing of the resource",
-                "operationId": "examplesAll",
-                "parameters": [
-                    {
-                        "name": "page",
-                        "in": "query",
-                        "description": "The page number",
-                        "required": false,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Everything is fine",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
+                "summary": "Поиск по параметрам",
+                "operationId": "23ddd039a49d42e63bb9d61d8c3cf9a6",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "allOf": [
+                                    {
+                                        "properties": {
+                                            "title": {
+                                                "type": "string",
+                                                "example": "Some title"
+                                            },
+                                            "likes": {
+                                                "type": "integer",
+                                                "example": 20
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                ]
                             }
                         }
                     }
                 },
-                "security": [
-                    {
-                        "api_key": []
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "properties": {
+                                                "title": {
+                                                    "type": "string",
+                                                    "example": "Some title"
+                                                },
+                                                "likes": {
+                                                    "type": "integer",
+                                                    "example": 20
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
-                ]
+                }
             }
         }
-    },
-    "components": {
-        "securitySchemes": {
-            "X-APP-ID": {
-                "type": "apiKey",
-                "name": "X-APP-ID",
-                "in": "header"
-            }
-        }
-    },
-    "tags": [
-        {
-            "name": "Examples",
-            "description": "Some example pages"
-        }
-    ]
+    }
 }
